<resources>
    <string name="app_name">KebOn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="daftar_akun">Don\'t have an account? SIGN UP</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Already have an account? LOG IN</string>

    <string-array name="bulan">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starter_pack">Starter Pack</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="monstera_pot_kecil_dll">Monstera, Pot kecil, dll...</string>
    <string name="let_s_live_a_greener_life">Let\'s Live a Greener Life!</string>
    <string name="hello_kresna">HELLO KRESNA</string>
    <string name="produk_populer">Produk Populer</string>
    <string name="kategori">Kategori</string>
    <string name="tips_berkebun">Tips Berkebun</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="pantau_semua_pesananmu_disin">Pantau semua pesananmu disin</string>
    <string name="tomat_buncis_apel_dll">Tomat, Buncis, Apel, dll...</string>
    <string name="pantau_tanamanmu">Pantau Tanamanmu</string>
    <string name="kami_menjamin_kualitas_terbaik">Kami menjamin kualitas terbaik</string>
    <string name="ayo_mulai">Ayo mulai bercocok tanam!</string>
    <string name="produk_paling_laris_terbaik_dari_kami">Produk paling laris terbaik dari kami</string>
    <string name="tips_dan_trik_terkini_untuk_kebun_anda">Tips dan Trik Terkini untuk Kebun Anda</string>
    <string name="produktif">Produktif</string>
    <string name="outdoor">Outdoor</string>
    <string name="strawberry_starter">Strawberry Starter</string>
    <string name="beli">Beli</string>
    <string name="deskripsi_tanaman">Stroberi adalah spesies hibrida yang tumbuh luas dari genus Fragaria, yang dibudidayakan di seluruh dunia untuk buahnya. Buah ini dihargai luas karena aroma khasnya, warna merah cerah, tekstur juicy, dan rasa manis. Ini dikonsumsi dalam jumlah besar, baik dalam makanan segar atau olahan seperti selai, jus, pai, es krim, milkshake, dan cokelat. Perasa dan aroma stroberi buatan juga banyak digunakan dalam produk-produk seperti permen, sabun, lip gloss, parfum, dan banyak lainnya.</string>
    <string name="deskripsi_alat">Sekop premium berbahan dasar besi diseluruh bagiannya. Bahan yang ringan ditambah dengan grip berbahan karet membuat sekop ini nyaman dipegang ketika digunakan.  Tersedia dalam warna hitam, hijau, biru, dan kuning. Masukkan warna yang diinginkan ketika checkout, jika tidak akan dikirimkan warna random.</string>
    <string name="sekop_berkebun">Sekop Berkebun</string>
    <string name="bibit_tomat_premium">Bibit Tomat Premium</string>
    <string name="deskripsi_bibit">Paket ini berisi biji tomat Beefsteak. Benih ini akan menghasilkan Tomat besar dan lezat dalam 90-100 hari setelah tanam. Untuk tanaman awal, mulailah benih di dalam ruangan dalam pot selama 5-7 minggu sebelum tanam di luar ruangan.</string>
    <string name="tentang_bibit">"Tomat (Solanum lycopersicum syn. Lycopersicum  esculentum) adalah tumbuhan dari keluarga  Solanaceae, tumbuhan asli Amerika Tengah dan  Selatan, dari Meksiko sampai Peru. Tomat  merupakan tumbuhan siklus hidup singkat, dapat  tumbuh setinggi 1 sampai 3 meter. Tumbuhan ini  memiliki buah berawarna hijau, kuning, dan merah  yang biasa dipakai sebagai sayur dalam masakan  atau dimakan secara langsung tanpa diproses.  Tomat memiliki batang dan daun yang tidak dapat  dikonsumsi karena masih sekeluarga dengan  kentang dan Terung yang mengadung Alkaloid. "</string>
    <string name="jasa">Jasa</string>
    <string name="kemangi">Kemangi</string>
    <string name="rincian_pesanan">Rincian Pesanan</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="salin">Salin</string>
    <string name="lacak">Lacak</string>
    <string name="status_pengiriman">Status Pengiriman</string>
    <string name="produk_dibeli">Produk Dibeli</string>
    <string name="subtotal_produk">Subtotal Produk</string>
    <string name="rp0">Rp0</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="total">Total</string>
    <string name="pesanan_diterima">Pesanan diterima</string>
    <string name="profil_saya">Profile Saya</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_alamat_baru">Tambah Alamat Baru</string>
    <string name="daftar_alamat">Daftar Alamat</string>
    <string name="edit_alamat">Edit Alamat</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota/Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="panen">Panen</string>
    <string name="tentang_tanaman">Tentang Tanaman</string>
    <string name="dirawat_sejak_1_febuari_2020">Dirawat sejak 1 Febuari 2020</string>
    <string name="berbuah">Berbuah</string>
    <string name="_15_april_2020">15,April 2020</string>
    <string name="estimasi_panen">Estimasi Panen</string>
    <string name="_30_hari">30 Hari</string>
    <string name="sisa_waktu_perawatan">Sisa Waktu Perawatan</string>
    <string name="foto_terkini">Foto Terkini</string>
    <string name="di_update_2_april_2020">Di-Update 2 April 2020</string>
    <string name="tinggi_tanaman_sudah_mencapai_kurang_lebih_50_cm_daunnya_lebat_dan_hijau_bunga_bunga_sudah_mulai_berubah_menjadi_buah_beberapa_buah_sudah_mulai_berwarna_merah">Tinggi tanaman sudah mencapai kurang lebih 50 cm. Daunnya lebat dan hijau. Bunga-bunga sudah mulai berubah menjadi buah. Beberapa buah sudah mulai berwarna merah.</string>
    <string name="status">Status</string>
    <string name="lacak_pesanan">Lacak Pesanan</string>
    <string name="nama_ekspedisi">Nama Ekspedisi: </string>
    <string name="nomor_ekspedisi">Nomor Ekspedisi</string>
    <string name="dd_mm_yyyy">dd:mm:yyyy</string>
    <string name="produk_favorite">Product Favorite</string>
    <string name="daftar_produk_yang_kamu_favoritkan">Daftar produk yang kamu favoritkan</string>
    <string name="checkout_panen">Checkout Panen</string>
    <string name="produk_dipanen">Produk Dipanen</string>
    <string name="tambah_durasi_perawatan">Tambah Durasi Perawatan</string>
    <string name="ubah">Ubah</string>
    <string name="reguler">Reguler</string>
    <string name="subtotal_tambahan_perawatan">Subtotal Tambahan Perawatan</string>
    <string name="subtotal_pengiriman">Subtotal Pengiriman</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="daftar_produk_yang_pernah_kamu_pesan">Daftar Produk yang Pernah Kamu Pesan</string>
    <string name="checkout">Checkout</string>
    <string name="durasi_perawatan">Durasi Perawatan</string>
    <string name="sub_total_perawatan">Sub Total Perawatan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="opsi_pengiriman">Opsi Pengiriman</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="deskripsi_pembayaran">Tolong selesaikan pembayaran dengan cara transfer sejumlah total pembayaran ke salah satu nomor rekening di bawah ini</string>
    <string name="no_rek">1640002173609</string>
    <string name="mandiri">Mandiri</string>
    <string name="adytia_kresna_farisi">Adytia Kresna Farisi</string>
    <string name="saya_sudah_bayar">Saya Sudah Bayar</string>
    <string name="sudah_bayar">Jika sudah melakukan pembayaran, harap klik tombol  \"SAYA SUDAH BAYAR\" agar admin kami segera  mengkonfirmasi pesanan Anda.</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="author">Author</string>
    <string name="tgl">dd-mm-yyyy</string>
    <string name="isi_deskripsi">Isi Deskripsi</string>
    <string name="apakah_ingin_langsung_bayar_langsung_ke_checkout_saja">Apakah ingin langsung bayar ? Langsung ke Checkout saja</string>
    <string name="home">Home</string>
    <string name="keranjang_belanja">"Keranjang Belanja "</string>
    <string name="semua_produk_yang_kamu_pilih">Semua Produk yang Kamu Pilih</string>
    <string name="jumlah_beli">Jumlah Beli</string>
    <string name="_1">1</string>
    <string name="keranjang">Keranjang</string>
    <string name="subtotal">Subtotal</string>
    <string name="_0">0</string>
    <string name="jika_menambahkan_jumlah_beli_mohon_untuk_swipe_down_agar_total_terupdate">Jika menambahkan jumlah beli mohon untuk swipe down agar total terupdate</string>
    <string name="instant">Instant</string>
    <string name="rp30000">Rp30000</string>
    <string name="durasi_pengiriman_selama_1_2_hari">Durasi pengiriman selama 1-2 hari</string>
    <string name="durasi_pengiriman_selama_3_5_hari">Durasi Pengiriman selama 3 - 5 hari</string>
    <string name="rp15000">Rp15000</string>
    <string name="hemat">Hemat</string>
    <string name="durasi_pengiriman_selama_5_6_hari">Durasi Pengiriman selama 5-6 hari</string>
    <string name="rp7500">Rp7500</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="nama_alamat">Nama Alamat</string>
    <string name="tolong_selesaikan_pembayaran_dengan_cara_transfer_sejumlah_total_pembayaran_ke_salah_satu_nomor_rekening_di_bawah_ini">Tolong selesaikan pembayaran dengan cara transfer sejumlah total pembayaran ke nomor rekening di bawah ini</string>
    <string name="_1640002173609">1640002173609</string>
    <string name="jika_sudah_melakukan_pembayaran_harap_klik_tombol_saya_sudah_bayar_agar_admin_kami_segera_mengkonfirmasi_pesanan_anda">Jika sudah melakukan pembayaran, harap klik tombol SAYA SUDAH BAYAR agar admin kami segera mengkonfirmasi pesanan Anda.</string>
    <string name="bulan">Bulan</string>
    <string name="hari">Hari</string>
    <string name="jika_mengubah_durasi_perawatan_agar_melakukan_swipe_down_agar_terupdate">Jika Mengubah Durasi Perawatan agar melakukan Swipe down agar terupdate</string>
    <string name="jika_merubah_alamat_pengiriman_dan_opsi_pengiriman_agar_melakukan_swipe_down_agar_terupdate">Jika merubah alamat pengiriman dan opsi pengiriman agar melakukan swipe down agar terupdate</string>
    <string name="total_bayar">"Total Bayar : "</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="dirawat_sejak">"Dirawat Sejak : "</string>
    <string name="tambah_durasi">Tambah Durasi</string>
    <string name="deskripsi_pertumbuhan">Deskripsi Pertumbuhan</string>
</resources>
