<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_alamat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_layout_gray"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_nm_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/nama_alamat"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_nomor_hp_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/nomor_telepon"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_alamat_lengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/alamat_lengkap"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />


</LinearLayout>