<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp"
    tools:context=".PembayaranActivity">


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btn_back_pembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:rotation="180"
            android:src="@drawable/ic_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/pembayaran"
            android:textColor="@color/colorGreen"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/total_pembayaran"
        android:textColor="@color/colorGreen"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <TextView
        android:id="@+id/tv_total_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/rp0"
        android:textColor="@color/colorGreen"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/rubik"
        android:text="@string/tolong_selesaikan_pembayaran_dengan_cara_transfer_sejumlah_total_pembayaran_ke_salah_satu_nomor_rekening_di_bawah_ini"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:background="@drawable/rounded_layout_orange"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/rubik"
            android:text="@string/_1640002173609"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:text="@string/mandiri"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout12"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/adytia_kresna_farisi"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout12"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/rubik"
        android:text="@string/jika_sudah_melakukan_pembayaran_harap_klik_tombol_saya_sudah_bayar_agar_admin_kami_segera_mengkonfirmasi_pesanan_anda"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_orange"
        android:fontFamily="@font/rubik_medium"
        android:text="Saya sudah bayar"
        android:textColor="@color/colorCream"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>